content overflow errors fixed

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -55,6 +55,15 @@ body {
 html {
   font-size: 62.5%;
   box-sizing: border-box; }
+  @media only screen and (max-width: 26.5em) {
+    html {
+      font-size: 45%; } }
+  @media only screen and (max-width: 56.25em) {
+    html {
+      font-size: 56.25%; } }
+  @media only screen and (min-width: 112.5em) {
+    html {
+      font-size: 75%; } }
 
 h1, h3 {
   font-weight: bold;
@@ -416,6 +425,7 @@ p, span {
 
 .contentContainer {
   position: relative;
+  overflow: hidden;
   z-index: 200; }
 
 .edit {
@@ -789,7 +799,7 @@ p, span {
     background-repeat: no-repeat;
     background-size: cover;
     z-index: 10;
-    top: calc(-100% - -5rem);
+    top: calc(-100% - -5.2rem);
     height: 30rem;
     width: 100%; }
   .footer::after {
@@ -802,10 +812,15 @@ p, span {
     font-family: "Poppins", sans-serif;
     color: white;
     z-index: -1;
+    background-color: red;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    overflow: hidden;
     content: 'Contact';
     z-index: 11;
-    line-height: 0;
-    top: 30%; }
+    line-height: 0; }
   .footer__logo {
     position: relative;
     z-index: 900;
@@ -874,6 +889,7 @@ p, span {
 
 .loading {
   display: inline-block;
+  margin-top: 5rem;
   position: relative;
   top: 50%;
   left: 50%;
