--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -29,6 +29,15 @@ html{
   //One REM is 10px
   font-size: 62.5%;
   box-sizing: border-box;
+  @include respond(mobile) {
+      font-size: 45%; //1 rem = 9px, 9/16 = 50%
+  }
+  @include respond(tablet) { 
+      font-size: 56.25%;
+  }
+  @include respond(4k) { 
+      font-size: 75%;
+  }
 }
 
 
