--- a/src/sass/_mixins.scss
+++ b/src/sass/_mixins.scss
@@ -91,3 +91,17 @@
   }
 }
 
+@mixin respond($breakpoint) {
+    @if $breakpoint == mobile {
+        @media only screen and (max-width: 26.5em) { @content };    //425px
+    }
+    @if $breakpoint == tablet {
+        @media only screen and (max-width: 56.25em) { @content };     //900px
+    }
+    @if $breakpoint == tab-land {
+        @media only screen and (max-width: 75em) { @content };    //1200px
+    }
+    @if $breakpoint == 4k {
+        @media only screen and (min-width: 112.5em) { @content };    //1800
+    }
+}
