--- a/src/sass/components/_edit-goals.scss
+++ b/src/sass/components/_edit-goals.scss
@@ -1,5 +1,6 @@
 .contentContainer {
   position: relative;
+  overflow: hidden;
   z-index: 200;
 }
 
