--- a/src/sass/components/_footer.scss
+++ b/src/sass/components/_footer.scss
@@ -1,4 +1,6 @@
 
+
+
 .footer {
   display: flex;
   z-index: 300;
@@ -8,21 +10,26 @@
   align-items: center;
   background: $color-primary-dark-2;
   flex-wrap: wrap;
-  // overflow: hidden;
+
   &::before{
     background: url('../images/border-dark.svg');
     @include shape-pseudo-element;
     z-index: 10;
-    top: calc(-100% - -5rem);
+    top: calc(-100% - -5.2rem);
     height: 30rem;
     width: 100%;
   }
   &::after{
   @include watermark-text;
+    background-color: red;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    overflow: hidden;
     content: 'Contact';
     z-index: 11;
     line-height: 0;
-    top: 30%;
   }
 
 
